@@ -1,6 +1,10 @@
 20110107
  - (djm) [regress/cert-hostkey.sh regress/cert-userkey.sh] fix shell test
    for no-ECC case. Patch from cristian.ionescu-idbohrn AT axis.com
+   - djm@cvs.openbsd.org 2011/01/06 22:23:53
+     [ssh.c]
+     unbreak %n expansion in LocalCommand; patch from bert.wesarg AT
+     googlemail.com; ok markus@
 
 20110106
  - (djm) OpenBSD CVS Sync
